--- a/Express-Exercise/views/index.ejs
+++ b/Express-Exercise/views/index.ejs
@@ -27,6 +27,17 @@
             </span>
         </div>
       </div>
+
+      <div class="col-md-8 col-md-offset-2">
+        <div class="jumbotron">
+          <h2>Front-End Test</h2>
+          <p>用不同方式实现瀑布流</p>
+            <span>
+              <a class="btn btn-success" href="/css-test" role="button">CSS-TEST</a>
+            </span>
+        </div>
+      </div>
+      
     </div>
     
   </body>
