--- a/Express-Exercise/public/stylesheets/style.css
+++ b/Express-Exercise/public/stylesheets/style.css
@@ -2,6 +2,9 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: #E6CCA6 url(../images/bg.jpg) repeat;
+  background-size: 100%;
+  width: 100%;
+  height: auto;
 }
 
 a {
